[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/images/player/Police 1.png" type="Texture" id=1]
[ext_resource path="res://Police.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/EnemyDie.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12.058, 5.63809 )

[sub_resource type="CapsuleShape2D" id=12]
radius = 14.208
height = 20.3248

[sub_resource type="CapsuleShape2D" id=13]

[sub_resource type="Animation" id=2]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/ArmHit/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 16, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/ArmHit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=10]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 48, 51 ]
}

[sub_resource type="Animation" id=11]
resource_name = "death"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 56, 61 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="Animation" id=9]
resource_name = "report"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 40, 45 ]
}

[sub_resource type="Animation" id=4]
resource_name = "right"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8, 16 ]
}

[sub_resource type="Animation" id=7]
resource_name = "shoot"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 24, 27 ]
}

[sub_resource type="Animation" id=8]
resource_name = "take-notes"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 32, 38 ]
}

[node name="Police" type="KinematicBody2D"]
position = Vector2( -0.44545, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.57787, -9.87873 )
scale = Vector2( 1.59766, 1.65234 )
texture = ExtResource( 1 )
hframes = 8
vframes = 8

[node name="ArmHit" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/ArmHit"]
position = Vector2( 21.8959, 5.82155 )
shape = SubResource( 5 )
disabled = true

[node name="Player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 3.86929, -2.67874 )
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 3.77008, -2.57953 )
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 6 )
anims/damage = SubResource( 10 )
anims/death = SubResource( 11 )
anims/idle = SubResource( 3 )
anims/report = SubResource( 9 )
anims/right = SubResource( 4 )
anims/shoot = SubResource( 7 )
anims/take-notes = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.0402985, 0.0246775 )
current = true
limit_left = 0
limit_top = 0
limit_right = 4143
limit_bottom = 2175

[node name="AttackPosition" type="Position2D" parent="."]
position = Vector2( 18.3311, 1.43707 )

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Sprite/ArmHit" to="." method="_on_ArmHit_body_entered"]
[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
